# python_iitp

./: README.md  ДЗ_1.ipynb
iitp_project — копия/: pyproject.toml
iitp_project — копия/src/iitp_project/: console.py  main.py
iitp_project — копия/src/iitp_project/methods/: bilinear_interp_decrease.py  bilinear_interp_increase.py
