[project]
name = "iitp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "hakimova mavjuda",email = "m.hakimova.2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "iitp_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
